src/test/ui/specialization/specialization-overlap-negative.stderr
error[E0119]: conflicting implementations of trait `std::marker::Send` for type `TestType<_>`:
  --> $DIR/specialization-overlap-negative.rs:9:1
   |
LL | unsafe impl<T: Clone> Send for TestType<T> {}
   | ------------------------------------------ first implementation here
LL | impl<T: MyTrait> !Send for TestType<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestType<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
